--- a/css/style.css
+++ b/css/style.css
@@ -39,14 +39,10 @@ header {
     position: fixed;
     top: 10%;
     left: 0;
-    width: calc(100% - 200px);
+    width: 100%;
     height: 87%;
     max-height: calc(90% - 20px);
     overflow-y: auto;
-}
-
-.content.active {
-    width: 100%;
 }
 
 .map {
@@ -63,11 +59,11 @@ header {
     width: 0;
     height: 87%;
     max-height: calc(90% - 20px);
-    background-color: #aaaaaa;
+    background-color: #ffffff;
 }
 
 .form.active {
-    width: 200px;
+    width: 20%;
 }
 
 .triangle {
@@ -80,12 +76,12 @@ header {
 .left {
     right: 0;
     border-left: 0 solid transparent;
-    border-right: 10px solid #aaaaaa;
+    border-right: 10px solid #888888;
     transform: translate(-10px);
 }
 
 .right {
-    border-left: 10px solid #ffffff;
+    border-left: 10px solid #888888;
     border-right: 0 solid transparent;
 }
 
